# B4AE-Beyond-For-All-Encryption-

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  ALGORITHM_NEGOTIATION_SPEC.md  ALL_TESTS_PASSING_STATUS.md  AUDIT_FAKTUAL_KODEBASE.md  AUDIT_FEATURES_ANALYSIS.md  AUDIT_IMPLEMENTATION_MISMATCHES.md  B4AE_Implementation_Plan.md  B4AE_Security_Framework.md  B4AE_Technical_Architecture.md  B4AE_vs_E2EE_Comparison.md  CARA_UPLOAD_GITHUB.md  CHANGELOG.md  COMPILATION_ERRORS_STATUS.md  COMPILATION_FIX_STATUS.md  CONTRIBUTING.md  CONTRIBUTORS.md  CRYPTOGRAPHIC_ASSUMPTIONS_BRUTAL.md  CRYPTO_IMPLEMENTATION_GUIDE.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEPLOYMENT_MODEL_THREAT_ANALYSIS.md  Dockerfile  E2EE_Analysis_and_Next_Gen_Security.md  ENTERPRISE_DEPLOYMENT_GUIDE.md  EXTERNAL_AUDIT_CHECKLIST.md  FINAL_COMPILATION_STATUS.md  FINAL_PROJECT_AUDIT.md  FINAL_UPLOAD_SUMMARY.md  FORMAL_VERIFICATION.md  GITHUB_UPLOAD_INSTRUCTIONS.md  GOVERNMENT_BID_CHECKLIST.md  HYBRID_MODEL_STRATEGY.md  IMPLEMENTATION_AUDIT.md  IMPLEMENTATION_AUDIT_CORRECTION.md  IMPLEMENTATION_NEXT_STEPS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTING_PLAN.md  (+61 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml  publish.yml  release.yml
b4ae-android/: Cargo.toml
b4ae-android-app/: README.md  settings.gradle
b4ae-android-app/app/: build.gradle
b4ae-android/src/: lib.rs  lib_enhanced.rs
b4ae-ffi/: Cargo.toml
b4ae-ffi/src/: full_protocol.rs  lib.rs
b4ae-relay/: Cargo.toml  README.md
b4ae-relay/src/: main.rs
b4ae-wasm/: Cargo.toml  NPM_PUBLISH.md
b4ae-wasm/src/: lib.rs
benches/: crypto_bench.rs  performance_bench.rs  protocol_bench.rs
bindings/: README.md  b4ae.h
bindings/swift/: B4AE.podspec  Package.swift  README.md
docs/: ALGORITHM_NEGOTIATION_SPEC.md  AUDITOR_RFP_OUTREACH.md  AUDIT_FEATURES_ANALYSIS.md  AUDIT_IMPLEMENTATION_MISMATCHES.md  CODEQL_LANGUAGES_FIX.md  COMPLIANCE_CERTIFICATION_DRAFT.md  COMPLIANCE_MATRIX.md  CRATES_IO_PUBLISH_PREP.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_MODEL_THREAT_ANALYSIS.md  DOMAIN_SEPARATION_MAP.md  ELARA_INTEGRATION.md  ENTERPRISE_DEPLOYMENT_GUIDE.md  FORMAL_SECURITY_SKETCH.md  FORMAL_VERIFICATION.md  FORMAL_VERIFICATION_COMPLETION.md  GATEWAY_PROXY.md  GIT_REPOSITORY_POLICY.md  HANDSHAKE_TRANSCRIPT_EXACT.md  INTEGRATION_TESTING_PLAN.md  KEY_LIFECYCLE_SECURITY_MAP.md  KEY_SCHEDULE_FORMALIZATION.md  METADATA_MODEL_SPECIFICATION.md  NEXT_STEPS_IMPLEMENTATION.md  OPEN_COLLECTIVE_APPLICATION.md  OPEN_COLLECTIVE_SUBMISSION_CHECKLIST.md  PARTNER_PROGRAM.md  PERFORMANCE.md  PERFORMANCE_UNDER_STRESS.md  PILOT_DEPLOYMENT_GUIDE.md  PLATFORM_SDK.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SDK_DISTRIBUTION_CHECKLIST.md  SECURITY_AUDIT_CHECKLIST.md  SECURITY_INVARIANTS_HARDENING.md  STATE_MACHINE_SECURITY_SPEC.md  STATE_MACHINE_SPECIFICATION.md  STRATEGIC_VISION.md  (+10 more)
docs/implementation/: ELARA_CRATES_IO_PUBLISH.md  ELARA_INTEGRATION.md  ENTERPRISE_CONTROL_PLANE_DESIGN.md  ERROR_HANDLING_SECURITY.md  GATEWAY_PROXY.md  HSM_INTEGRATION_GUIDE.md  IMPLEMENTATION_SECURITY_NOTES.md  MOBILE_SDK_ENHANCED_GUIDE.md
docs/research/: B4AE_VS_E2EE_ARCHITECTURE.md  HYBRID_COMPOSITION_RATIONALE.md  KEY_COMPROMISE_ANALYSIS.md  WHITEPAPER_DRAFT.md
enterprise-api/: Cargo.toml  README.md
enterprise-api/src/: main.rs
examples/: b4ae_audit_logging_demo.rs  b4ae_chat_demo.rs  b4ae_elara_demo.rs  b4ae_file_transfer_demo.rs  b4ae_gateway_demo.rs  b4ae_hsm_integration_demo.rs  b4ae_key_rotation_demo.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_aes_gcm.rs  fuzz_handshake.rs  fuzz_hkdf.rs  fuzz_message.rs  fuzz_mldsa.rs  fuzz_mlkem.rs
implementation/: MOBILE_SDK_ENHANCED_GUIDE.md  PLUGIN_ARCHITECTURE.md
proptest-regressions/crypto/double_ratchet/: chain_key_ratchet.txt
research/: 01_Quantum_Cryptography_Analysis.md  02_Post_Quantum_Algorithm_Evaluation.md  03_Metadata_Protection_Techniques.md  04_Performance_Benchmarking_Framework.md  05_Competitive_Analysis.md  ACADEMIC_REVISION_SUMMARY.md  HYBRID_COMPOSITION_RATIONALE.md  KEY_COMPROMISE_ANALYSIS.md  METADATA_LEAKAGE_ANALYSIS.md  MULTI_SESSION_SECURITY_ANALYSIS.md  WHITEPAPER_DRAFT.md
scripts/: build_android.ps1  build_android.sh  build_ios.ps1  build_ios.sh  build_wasm.ps1  performance_test.sh  prepare_publish.ps1  prepare_publish.py  prepare_publish.sh  run_tests.sh  security_audit.ps1  security_audit.sh
specs/: B4AE_API_Design_v1.0.md  B4AE_Compliance_Requirements.md  B4AE_Handshake.cfg  B4AE_Handshake.tla  B4AE_Performance_Requirements.md  B4AE_Protocol_Specification_v1.0.md
specs/coq/: B4AE_Enhanced_Verification.v  B4AE_Handshake.v  Makefile  README.md  _CoqProject
src/: audit.rs  client.rs  client_v2.rs  elara_node.rs  error.rs  hsm.rs  key_hierarchy.rs  key_store.rs  lib.rs  performance.rs  prelude.rs  storage.rs  time.rs
src/crypto/: aes_gcm.rs  chacha20poly1305_wrapper.rs  constant_time.rs  dilithium.rs  hkdf.rs  hybrid.rs  hybrid_kex.rs  kyber.rs  mod.rs  onion.rs  padding.rs  perf.rs  pfs_plus.rs  pq.rs  random.rs  xeddsa.rs  zkauth.rs
src/crypto/double_ratchet/: chain_key_ratchet.rs  hybrid_dh_ratchet.rs  mod.rs  (+2 more)
src/hsm/: mod.rs  pkcs11.rs  pkcs11_enhanced.rs
src/metadata/: cover_traffic.rs  mod.rs  obfuscation.rs  padding.rs  protector.rs  timing.rs
src/protocol/: handshake.rs  message.rs  mod.rs  session.rs
src/security/: audit.rs  crypto.rs  fuzzing.rs  handshake.rs  hardened_core.rs  migration_guide.rs  mod.rs  network.rs  protocol.rs
src/transport/: elara.rs  mod.rs  proxy.rs
tests/: cookie_challenge_integration_test.rs  dos_metrics_test.rs  double_ratchet_integration_test.rs  elara_integration_test.rs  fuzzing_test.rs  integration_test.rs  mode_binding_integration_test.rs  penetration_test.rs  performance_test.rs  pq_integration_test.rs  proptest_invariants.rs  security_audit_tests.rs  security_test.rs  timestamp_validation_bugfix_test.proptest-regressions  timestamp_validation_bugfix_test.rs  timestamp_validation_preservation_test.proptest-regressions  timestamp_validation_preservation_test.rs
wasm-demo/: build.ps1  build.sh  index.html  package.json
(+20 files in other folders)
