[package]
name = "b4ae"
version = "1.0.0"
edition = "2021"
authors = ["B4AE Team"]
description = "B4AE (Beyond For All Encryption) - Quantum-resistant secure communication protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rafaelsistems/B4AE-Beyond-For-All-Encryption-"
documentation = "https://docs.rs/b4ae"
homepage = "https://github.com/rafaelsistems/B4AE-Beyond-For-All-Encryption-"
readme = "README.md"
keywords = ["cryptography", "post-quantum", "encryption", "security", "messaging"]
exclude = [
    "elara/", ".github/", "docs/", "research/", "specs/", "specs/**",
    "bindings/", "bindings/**",
    "b4ae-android/", "b4ae-ffi/", "b4ae-wasm/", "wasm-demo/",
    "b4ae-android-app/", "b4ae-android-app/**",
    "fuzz/", "scripts/",
    "Dockerfile", "docker-compose.yml", ".dockerignore",
    ".gitignore", ".gitmodules", ".gitlab-ci.yml", "Cargo.toml.orig",
    "cbindgen.toml", "RELEASE_NOTES_*.md", "TESTING_GUIDE.md", "CONTRIBUTING.md", "CHANGELOG.md",
]
categories = ["cryptography", "network-programming"]

[dependencies]
# Post-Quantum Cryptography
pqcrypto-kyber = { version = "0.8", optional = true }
pqcrypto-dilithium = { version = "0.5", optional = true }
pqcrypto-traits = "0.3"

# Classical Cryptography
ring = "0.17"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
aes-gcm = "0.10"
sha3 = "0.10"
hkdf = "0.12"

# Utilities
hex = "0.4"
zeroize = { version = "1.7", features = ["derive"] }
# Pin 0.8 to avoid rand 0.10 (breaking API, Edition 2024)
rand = "=0.8.5"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
subtle = "2.5"  # Constant-time comparison untuk mencegah timing attacks

# Async runtime
tokio = { version = "1.35", features = ["full"], optional = true }
async-trait = "0.1"

# Networking
quinn = { version = "0.11", optional = true }

# ELARA Transport (UDP, NAT traversal via STUN, packet delivery)
elara-transport = { version = "0.1", optional = true }

# SOCKS5 proxy (IP anonymization, Tor)
socks = { version = "0.3", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# HSM (PKCS#11)
cryptoki = { version = "0.11", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio-test = "0.4"

[features]
default = ["pqcrypto-alt", "full-crypto"]
full-crypto = ["pqcrypto-kyber", "pqcrypto-dilithium"]
pqcrypto-alt = ["pqcrypto-kyber", "pqcrypto-dilithium"]
async = ["tokio"]
networking = ["quinn", "tokio"]
elara = ["elara-transport", "tokio"]
proxy = ["socks"]
hsm = []
hsm-pkcs11 = ["hsm", "cryptoki"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Faster CI builds (avoids 6h timeout on macOS/Windows runners)
[profile.ci]
inherits = "release"
lto = false
codegen-units = 16

[profile.bench]
inherits = "release"

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "protocol_bench"
harness = false

[lib]
name = "b4ae"
path = "src/lib.rs"

# Phase 3: Integration & Testing
[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

[[test]]
name = "security_test"
path = "tests/security_test.rs"

[[test]]
name = "performance_test"
path = "tests/performance_test.rs"

[[test]]
name = "fuzzing_test"
path = "tests/fuzzing_test.rs"

[[test]]
name = "penetration_test"
path = "tests/penetration_test.rs"

[[test]]
name = "elara_integration_test"
path = "tests/elara_integration_test.rs"
required-features = ["elara"]

[[test]]
name = "proptest_invariants"
path = "tests/proptest_invariants.rs"

[[example]]
name = "b4ae_elara_demo"
path = "examples/b4ae_elara_demo.rs"
required-features = ["elara"]

[[example]]
name = "b4ae_chat_demo"
path = "examples/b4ae_chat_demo.rs"
required-features = ["elara"]

[[example]]
name = "b4ae_file_transfer_demo"
path = "examples/b4ae_file_transfer_demo.rs"
required-features = ["elara"]

[[example]]
name = "b4ae_gateway_demo"
path = "examples/b4ae_gateway_demo.rs"
required-features = ["elara"]
