[package]
name = "b4ae-enterprise-api"
version = "0.1.0"
edition = "2021"
description = "B4AE Enterprise Control Plane MVP — audit API"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
