[package]
name = "b4ae-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
b4ae = { path = "..", features = ["full-crypto"] }
bincode = "1.3"

[[bin]]
name = "fuzz_handshake"
path = "fuzz_targets/fuzz_handshake.rs"
test = false
doc = false

[[bin]]
name = "fuzz_message"
path = "fuzz_targets/fuzz_message.rs"
test = false
doc = false
